--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "morgan": "^1.9.0",
-    "nodemon": "^1.12.1"
+    "nodemon": "^1.12.1",
+    "passport": "^0.4.0",
+    "passport-google-auth": "^1.0.2"
   }
 }
