--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
   "homepage": "https://github.com/krokvik/be#readme",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "db-migrate-sqlite3": "^0.2.1",
     "ethereumjs-util": "^5.1.2",
     "express": "^4.16.2",
     "morgan": "^1.9.0",
     "nodemon": "^1.12.1",
     "solc": "^0.4.18",
+    "sqlite3": "^3.1.13",
     "web3": "^1.0.0-beta.24"
   }
 }
