--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/krokvik/be#readme",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "db-migrate": "^0.10.0-beta.24",
     "db-migrate-sqlite3": "^0.2.1",
     "ethereumjs-util": "^5.1.2",
     "express": "^4.16.2",
