--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,13 @@
+.DS_Store
+npm-debug.log*
+yarn-debug.log*
+
 /node_modules
+/src/config/local.js
+
+# Editor directories and files
+.idea
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
