--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Krokvik BE",
   "main": "bin/www",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "migrate": "node node_modules/db-migrate/bin/db-migrate up"
   },
   "repository": {
     "type": "git",
