--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "nodemon": "^1.12.1",
     "solc": "^0.4.18",
     "sqlite3": "^3.1.13",
+    "uuid": "^3.1.0",
     "web3": "^1.0.0-beta.24"
   }
 }
